# Reviiyot

./: CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Main.cpp  N1000.txt  Player.cpp  Player.h  README.md  config_1.txt  config_2.txt
include/: Card.h  Deck.h  Game.h  Player.h
src/: Card.cpp  Deck.cpp  Game.cpp  Hand.cpp  Main.cpp  Player.cpp
